changed body, height property to 100% from 100vh to fix overlapping.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
 
-    height: 100vh;
+    height: 100%;
 }
 
 div {
